I.O/Trabajos Prácticos Bruno/TP 4/2/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\bruni\Desktop\Bruno\Facultad\4° Año\Primer Cuatrimestre\Introducción a Objetos\Trabajos Prácticos\TP 4\2
-d
C:\Users\bruni\Desktop\Bruno\Facultad\4° Año\Primer Cuatrimestre\Introducción a Objetos\Trabajos Prácticos\TP 4\2\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\bruni\Desktop\Bruno\Facultad\4° Año\Primer Cuatrimestre\Introducción a Objetos\Trabajos Prácticos\TP 4\2\Transacción.java
<---- end of javadoc command ---->
Loading source file C:\Users\bruni\Desktop\Bruno\Facultad\4° Año\Primer Cuatrimestre\Introducción a Objetos\Trabajos Prácticos\TP 4\2\Transacción.java...
C:\Users\bruni\Desktop\Bruno\Facultad\4° Año\Primer Cuatrimestre\Introducción a Objetos\Trabajos Prácticos\TP 4\2\Transacción.java:16: error: <identifier> expected
    private static int 0 DEP;
                      ^
C:\Users\bruni\Desktop\Bruno\Facultad\4° Año\Primer Cuatrimestre\Introducción a Objetos\Trabajos Prácticos\TP 4\2\Transacción.java:16: error: <identifier> expected
    private static int 0 DEP;
                            ^
2 errors
